--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,3 +1,3 @@
-Flask
-# Flask-WTF  # Uncomment if using Flask-WTF
-# Flask-SQLAlchemy  # Uncomment if using Flask-SQLAlchemy
+Flask==2.0.1
+mysql-connector-python==8.0.23
+werkzeug==2.0.1
