--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,30 @@ services:
   app:
     build: .
     ports:
-      - "1532:1532"  # Map port 1532 on the host to port 1532 on the container
+      - "1532:1532"
     volumes:
-      - .:/app  # Bind mount the current directory to /app in the container
+      - .:/app
     environment:
-      FLASK_ENV: development  # Set environment variables if needed
+      FLASK_ENV: development
+      MYSQL_HOST: db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: toor
+      MYSQL_DATABASE: db
+    command: >
+      sh -c "sleep 10 && python /app/database/init_db.py && flask run --host=0.0.0.0 --port=1532"
+
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: toor
+      MYSQL_DATABASE: db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: toor
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
